# SystemMonitoring

./: README.md
SystemInfoSharp/: SystemInfoSharp.sln
SystemInfoSharp/SystemInfoSharp/: Program.cs  SystemInfoSharp.csproj  SystemInfoWrapper.cs
SystemInformationGatherer/: CMakeLists.txt  SystemInfo.cpp  SystemInfo.hpp
